feat: add Jakarta Data 1.0 support with build-time repository generation
Implement full Jakarta Data 1.0 @Repository support for Morphium:
- CrudRepository/BasicRepository CRUD operations
- Query derivation from method names (findBy, countBy, existsBy, deleteBy)
- @Find + @By annotated methods with @OrderBy, Limit, Sort, Order
- @Query with JDQL (Jakarta Data Query Language)
- Page<T> / PageRequest pagination with total counts
- @StaticMetamodel generation (Attribute, SortableAttribute, TextAttribute)
- Build-time validation of entity fields, ID types, method signatures

All repository implementations are generated at Quarkus build time via
Gizmo bytecode generation — no runtime reflection, GraalVM native compatible.